Fix spacing in toggler

--- a/styles/_components/_dropdown.scss
+++ b/styles/_components/_dropdown.scss
@@ -18,6 +18,7 @@
   &__toggler {
     display: flex;
     align-items: center;
+    justify-content: space-between;
     padding: 8px;
     height: 35px;
     font-size: 15px;
